--- a/css/common.css
+++ b/css/common.css
@@ -151,12 +151,14 @@ body{
 
 .tab_contents {
     position: absolute;
-    top: 70px;
+    top: 56px;
     left: 0;
     width: 100%;
     height: 130px;
 }
-.tab_contents .notice {}
+.tab_contents .notice {
+    /* display: none; */
+}
 
 .tab_contents .notice a {
     display: block;
@@ -168,7 +170,6 @@ body{
 
 .tab_contents .gallery {
     display: flex;
-    /* background-color: red; */
     gap: 12px;
     height: 100%;
     padding: 10px 10px 0 10px;
@@ -187,15 +188,60 @@ body{
 
 .banner{
     flex: 1;
-    background-color: red;
+}
+
+.banner img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .link{
     flex: 1;
-    background-color: yellow
+}
+
+.link .items {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 16px;
+}
+
+.link .items a {
+    display: block;
+    background-color: #ddd;
+    border-radius: 8px;
+    height: 85px;
+    line-height: 85px;
+    text-align: center;
+}
+
+/* .footer */
+.footer{
+    display: flex;
+    height: 100px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 16px;
+    background-color: #eee;
+}
+
+.footer .sns {
+    display: flex;
+    gap: 30px;
+}
+
+.footer h1 a{
+    display: block;
+    text-indent: -9999px;
+    width: 200px;
+    height: 40px;
+    background: url('../images/logo-footer.png') no-repeat center;
+}
+
+.blind {
+    display: none;
 }
 
 
-/* .footer */
-.footer{}
 
